@@ -61,6 +61,10 @@ compute.pigengene <- function(
     n1 <- nrow(eigengenes)
     membership <- stats::cor(balancedData,
                              as.matrix(eigengenes[rownames(balancedData), , drop=FALSE]))
+    ## If a gene is almost constant, the above correlation may be NA altough
+    ## that gene is definitely in module 0,
+    ## and NOT in any other module.
+    membership[colSds(balancedData) < 10^(-8), ] <- as.numeric(colnames(membership)=="ME0")
     eigengenes <- eigengenes[balanced$origSampleInds, , drop=FALSE]
     ann1 <- as.character(Labels[rownames(eigengenes)])
     ##^ pheatmap cannot work with e.g., TRUE
